--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-spinners": "^0.13.8",
+    "tailwind-scrollbar": "^3.1.0",
     "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1"
   },
